fixing bug in module selection that was using wrong size to limit scope of available modules
switching from google charts to chartist-js

--- a/spacesim.css
+++ b/spacesim.css
@@ -41,3 +41,27 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 input:-moz-placeholder, textarea:-moz-placeholder {
   color: #ffc107;
 }
+
+.ct-series-a .ct-point {
+  stroke: transparent;
+}
+.ct-series-a .ct-line {
+  stroke: #ffc107;
+}
+
+.ct-series-b .ct-line,
+.ct-series-b .ct-point {
+  stroke: white;
+}
+
+.ct-grid {
+  stroke: #ffc107;
+}
+.ct-labels span {
+  color: #ffc107;
+}
+
+.ct-axis-title {
+  color: #ffc107;
+  fill: #ffc107;
+}
